--- a/0.0-test.ipynb
+++ b/0.0-test.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "source": [
     "### Oppgave\n",
-    "- Eksperimenter med *Tab completion* i Jupyter\n",
+    "- Eksperimenter med *Tab completion* og *tooltips* i Jupyter\n",
     "- Les om Jupyters såkalte *magic commands*.\n",
     "\n",
     "Hint: Google. Eller se <a href=\"http://nbviewer.jupyter.org/github/jvns/pandas-cookbook/blob/v0.2/cookbook/A%20quick%20tour%20of%20IPython%20Notebook.ipynb\">her</a>."
