--- a/Del1-intro/DAT158-Del1-enkle_eksempler.ipynb
+++ b/Del1-intro/DAT158-Del1-enkle_eksempler.ipynb
@@ -39,12 +39,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi skal bruke et klassisk datasett: Iris"
+    "Vi skal bruke et klassisk datasett: [Iris flower data set](https://archive.ics.uci.edu/ml/datasets/iris)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {
       "image/png": {
        "width": "60%"
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fra sepal- og petal-lengder og -bredder (begerblad og kronblad) til en Iris-blomst skal vi predikere hvorvidt det er en Iris-Setosa, Iris-Versicolor eller en Iris-Virginica. \n",
+    "Oppgaven er å predikere typen Iris-blomst, enten *Iris-Setosa*, *Iris-Versicolor* eller *Iris-Virginica*, fra dens sepal- og petal-lengder og -bredder (begerblad og kronblad). \n",
     "\n",
     "Merk: å tilordne en klasse til hvert datapunkt kalles **klassifikasjon**. Vi skal lære mye mer om klassifikasjon neste uke! "
    ]
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gjennom hele kurset skal vi bruke <a href=\"https://www.datacamp.com/community/tutorials/python-numpy-tutorial\">numpy</a> til numeriske beregninger, <a href=\"https://www.datacamp.com/community/tutorials/pandas-tutorial-dataframe-python\">pandas</a> og <a href=\"https://www.datacamp.com/community/tutorials/matplotlib-tutorial-python\">matplotlib</a> til å lage plots og figurer. *Du blir nødt til å gjøre deg godt kjent med disse!* Du finner info i lenkene over, samt i DAT158 Del 0 på Canvas. Om du ikke har fullført Del 0, gjør det før du går i gang med denne notebooken!"
+    "Gjennom hele kurset skal vi bruke <a href=\"https://www.datacamp.com/community/tutorials/python-numpy-tutorial\">numpy</a> til numeriske beregninger, <a href=\"https://www.datacamp.com/community/tutorials/pandas-tutorial-dataframe-python\">pandas</a> og <a href=\"https://www.datacamp.com/community/tutorials/matplotlib-tutorial-python\">matplotlib</a> til å lage plots og figurer. *Du blir nødt til å gjøre deg godt kjent med disse!* Lenkene over gir innføringer. Du finner også informasjon i DAT158 Del 0 på Canvas. Om du ikke har fullført Del 0, gjør det før du går i gang med denne notebooken!"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For å automatisk reloade moduler definert i eksterne filer:\n",
+    "# For å automatisk reloade moduler definert i eksterne filer. Ikke nødvendig i dette tilfellet, men ofte praktisk.\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Din tur!: ** Les mer om disse og andre *magic* commands ved å skrive `%magic`. Du kan fjerne kommentar-tegnet `#` i cellen nedenfor og kjøre cellen med `Shift+Enter`."
+    "> **Din tur!: ** Les mer om disse og andre *magic* commands ved å skrive `%magic`. Du kan fjerne kommentar-tegnet `#` i cellen nedenfor og kjøre cellen med `Shift+Enter`."
    ]
   },
   {
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi har altså tilgang til to målinger (sepal lengde og bredde) for 150 blomster. Fra egenskapene i X skal vår modell kunne predikere korrekt label y."
+    "Vi har nå altså tilgang til to målinger (sepal lengde og bredde) for 150 blomster. Fra egenskapene i X skal vår modell kunne predikere korrekt label y."
    ]
   },
   {
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Din tur!**\n",
+    "> **Din tur!**\n",
     "- Du kan også bruke `rf.score` til å finne accuracy. Forsøk dette. \n",
     "- Forsøk å endre på default-parametre i `RandomForestClassifier`. Se om du får bedre accuracy. Hint: forsøk høyere`n_estimators`. Vi skal lære mer om hva parametrene betyr senere i kurset.\n",
     "- Forsøk å bruke alle fire features i modellen, altså petal og sepal lengder og bredder. Hvor godt gjør random forest det da?\n",
@@ -667,7 +667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La oss gjenta prosedyren på et annet benchmark-datasett: **Diabetes Data Set**. Beskrivelse av datasettet samt lenke til data er tilgjengelig her: https://archive.ics.uci.edu/ml/datasets/diabetes. Vi laster heller ned data fra https://assets.datacamp.com/production/course_1939/datasets/diabetes.csv, da noe av tilretteleggingen allerede er gjort for oss i denne versjonen (data er ferdig pakket ut og samlet i en csv-fil). \n",
+    "La oss gjenta prosedyren på et annet benchmark-datasett: **Diabetes Data Set**. Beskrivelse av datasettet samt lenke til data er tilgjengelig her: https://archive.ics.uci.edu/ml/datasets/diabetes. Vi laster heller ned data fra https://assets.datacamp.com/production/course_1939/datasets/diabetes.csv da noe av tilretteleggingen allerede er gjort for oss i denne versjonen (data er ferdig pakket ut og samlet i en csv-fil). \n",
     "\n",
     "Når en arbeider med maskinlæring er mye av utfordringen å tilrettelegge data og designe gode features. Vi skal snakke mye om dette i DAT158, allerede i Lab 1. Men vi hopper over dette nå ved å bruke godt tilrettelagte (og dermed ikke særlig realistiske) datasett."
    ]
@@ -991,7 +991,7 @@
    "source": [
     "**Eneste forskjellen er at vi har byttet ut data!** \n",
     "\n",
-    "> Maskinlæringsmodeller er svært generiske: samme modell kan brukes til mange ulike oppgaver!"
+    "> **Maskinlæringsmodeller er svært generiske: samme modell kan brukes til mange ulike oppgaver!**"
    ]
   },
   {
@@ -1050,14 +1050,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Det er altså glukose-nivået som har størst forklaringsverdi, etterfulgt av BMI og alder."
+    "Det er altså glukose-nivået som har størst forklaringsverdi, etterfulgt av BMI og alder. Det er ikke vanskelig å tenke seg at slik informasjon er svært nyttig i praksis!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Din tur!**\n",
+    "> **Din tur!**\n",
     "- Hent ut feature importances for Iris-prediksjone. Er det sepal-lengde eller -bredde som gir mest informasjon?\n",
     "- Konstruer en annen random forest ved å bytte ut `random_state`. Hva skjer med accuracy? Hva skjer med feature importances? \n",
     "- Forsøk å lage en bedre random forest-modell ved å endre på parametre. Om du ønsker et *dypdykk*, bruk `grid_search` (http://scikit-learn.org/stable/modules/grid_search.html) for å finne gode parametre. \n",
