--- a/0.0-test.ipynb
+++ b/0.0-test.ipynb
@@ -4,44 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python, Numpy, Pandas, Matplotlib og Pytorch"
+    "# Python, Numpy, Pandas, Matplotlib and Pytorch"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Om du er i stand til å kjøre gjennom denne notebooken har du satt opp Python korrekt. "
+    "If you're able to successfully run through this notebook then you're good to go. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gå til **ML - Del0 - Kom i gang** på [Canvas](https://hvl.instructure.com) for mer informasjon om programvaren vi skal bruke. "
+    "Go to **ML - Part 0 - Getting started** in [Canvas](https://hvl.instructure.com) for more information about the software we'll use in the course. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dersom du støter på feilmeldinger, gå til https://github.com/alu042/DAT158ML for instruksjoner."
+    "If you get any error messages, go to https://github.com/alu042/DAT158ML for instructions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hvordan bruke Jupyter Notebook?"
+    "## How to use Jupyter Notebook?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jupyter Notebook er et hendig verktøy for eksperimentering med kode. Alt av tekst og kode er skrevet i en blanding av HTML, Markdown og Python.\n",
+    "Jupyter Notebook is a convenient tool for experimenting with code. All text and code is written in HTML, Markdown and Python.\n",
     "\n",
-    "Bruk piltast opp og ned for å navigere mellom cellene. Trykk ENTER på en celle for å gå inn i redigeringsmodus. ESC for å gå ut av redigeringsmodus."
+    "Use the arrow keys to navigate between cells. Press ENTER on a cell to enter edit mode. ESC to go back. (Try it now!)"
    ]
   },
   {
@@ -50,53 +50,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Dette er en Jupyter-celle. Trykk på «Run» i menyen for å kjøre cellen. \")"
+    "print(\"This is a Jupyter cell containing Python code. Hit 'Run' in the menu to run the cell. \")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Du kan også kjøre celler med **Shift+Enter** og **Ctrl+Enter**. Forsøk å kjøre cellen over med disse. "
+    "You can also run cells using **Shift+Enter** and **Ctrl+Enter**. Try running the above cell using both of these. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bruk Help-menyen øverst for mer informasjon."
+    "Use the Help menu for more information."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DAT158-ML kommer til å bruke Notebooks til det meste av koding. Du kommer derfor til å bli veldig komfortabel med Jupyter etterhvert."
+    "DAT158-ML will use Notebook for most of our coding. You'll get good Notebook skills after a while."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Oppgave\n",
-    "- Eksperimenter med *Tab completion* og *tooltips* i Jupyter\n",
-    "- Les om Jupyters såkalte *magic commands*.\n",
+    "### Exercise\n",
+    "- Experiment with *Tab completion* and *tooltips* in Jupyter\n",
+    "- Read about Jupyter *magic commands*.\n",
     "\n",
-    "Hint: Google. Eller se <a href=\"http://nbviewer.jupyter.org/github/jvns/pandas-cookbook/blob/v0.2/cookbook/A%20quick%20tour%20of%20IPython%20Notebook.ipynb\">her</a>."
+    "Hint: Google. Or have a look <a href=\"http://nbviewer.jupyter.org/github/jvns/pandas-cookbook/blob/v0.2/cookbook/A%20quick%20tour%20of%20IPython%20Notebook.ipynb\">here</a>."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importer pakker"
+    "# Import libraries"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dette er pakker vi skal bruke flittig i løpet av kurset:"
+    "These are libraries we'll use frequently:"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For å vise figurer direkte i notebooks:\n",
+    "# To display plots directly in notebooks:\n",
     "%matplotlib inline"
    ]
   },
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Et mye brukt plottebibliotek:\n",
+    "# A commonly used plotting library:\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# En utvidelse av matplotlib som kan generere enda penere figurer:\n",
+    "# An extension of matplotlib that can generate even nicer plots:\n",
     "import seaborn as sns"
    ]
   },
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Et bibliotek for effektiv manipulasjon av matriser (og annet) i Python:\n",
+    "# A library for efficient manipulation of matrices (and more):\n",
     "import numpy as np"
    ]
   },
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For å lese, skrive og behandle data på tabell-form:\n",
+    "# To read, write and process tabular data:\n",
     "import pandas as pd"
    ]
   },
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For maskinlæring:\n",
+    "# For machine learning:\n",
     "import sklearn"
    ]
   },
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For nevrale nettverk («deep learning»):\n",
+    "# For neural networks (\"deep learning\"):\n",
     "import torch\n",
     "import torchvision"
    ]
@@ -175,14 +175,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test pakker"
+    "# Test libraries"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NB:** Hensikten med følgende er å teste din installasjon. Det er ingen fare om koden gir lite mening for deg nå. Alt vil bli forståelig i løpet av kurset. "
+    "**NB:** The purpose of the following is to test your installation. Don't worry if things don't make much sense to you right now. It'll all become familiar during the course."
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `matplotlib`: Et enkelt plot "
+    "## `matplotlib`: a simple plot "
    ]
   },
   {
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dette skal gi en figur med en sinus-funksjon."
+    "This should result in a figure displaying a sine function."
    ]
   },
   {
@@ -251,20 +251,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data som skal plottes (generert med Numpy)\n",
+    "# Data to be plotted (generated using Numpy)\n",
     "t = np.arange(0.0, 2.0, 0.01)\n",
     "s = 1 + np.sin(2 * np.pi * t)\n",
     "\n",
-    "# Lag figur av en viss størrelse\n",
+    "# Create a figure of a certain size\n",
     "f = plt.figure(figsize=(8,4))\n",
     "\n",
     "# Plot t versus s\n",
     "plt.plot(t, s)\n",
     "\n",
-    "# Legg til tittel og labels:\n",
-    "plt.title('Et enkelt plot')\n",
-    "plt.xlabel('tid (s)')\n",
-    "plt.ylabel('spenning')\n",
+    "# Add title and labels:\n",
+    "plt.title('A simple plot')\n",
+    "plt.xlabel('time (s)')\n",
+    "plt.ylabel('voltage')\n",
     "\n",
     "# Vis plot:\n",
     "plt.show()"
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `Seaborn`: Et mer avansert plot"
+    "## `Seaborn`: a more advanced plot"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kilde: [Link](https://seaborn.pydata.org/examples/scatterplot_categorical.html)"
+    "Source: [Link](https://seaborn.pydata.org/examples/scatterplot_categorical.html)"
    ]
   },
   {
@@ -357,8 +357,8 @@
    "outputs": [],
    "source": [
     "df['age'].hist()\n",
-    "plt.title(\"Histogram av alder\")\n",
-    "plt.xlabel(\"Alder\")\n",
+    "plt.title(\"Histogram of age\")\n",
+    "plt.xlabel(\"Age\")\n",
     "plt.show()"
    ]
   },
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `Maskinlæring`"
+    "## `scikit-learn`: machine learning"
    ]
   },
   {
@@ -469,16 +469,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `PyTorch`: Avansert maskinlæring / nevrale nettverk"
+    "## `PyTorch`: Advanced machine learning / neural networks"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fra PyTorch sin «Deep learning with PyTorch: A 60 minute blitz»: https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html.\n",
+    "From PyTorch's \"Deep learning with PyTorch: A 60 minute blitz\": https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html.\n",
     "\n",
-    "**Det er ikke nødvendig å kjøre mer enn første celle i denne koden (med mindre du er nysgjerrig :-))**"
+    "**To test your installation you only have to run the first cell below.** Run the rest only of you're curious.. :-)"
    ]
   },
   {
