--- a/Part2-classification/DAT158-Part2-Classification.ipynb
+++ b/Part2-classification/DAT158-Part2-Classification.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<b><span style=\"font-size:150%\">Work in progress</span></b>\n",
     "\n",
-    "version August 17th, 2018"
+    "version August 19th, 2018"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In classification the computer is asked to decide which of N classes an input belongs to. Think of the fishes from the first lecture. Or classifying images according to the objects that appear in the image (i.e. cat vs dogs vs cars, hot dog vs nothotdog).\n",
+    "In classification the computer is asked to decide which of N classes an input belongs to. Think of the fish from the first lecture. Or classifying images according to the objects that appear in the image (i.e. cat vs dogs vs cars, hot dog vs nothotdog).\n",
     "\n",
     "It's about finding a good function from the inputs $X$ to the a set of labels:\n",
     "\n",
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because of some possible issues with loading the data below we import this convenience function:"
+    "Because of some possible issues with loading the data below we import this convenience function for our `utils.py`:"
    ]
   },
   {
@@ -690,7 +690,7 @@
    "source": [
     "First of all, when evaluating the performance of a model one should really ask \"what is the end goal for my system\"? We're supposed to create systems that are useful in some context, as part of a larger system, which typically has a higher-level goal that our system should aim to optimize. Perhaps it's worth sacrificing accuracy for speed, or not getting a lot of useless clicks that don't lead to sales. \n",
     "\n",
-    "However, we won't think about these things in the following. "
+    "However, we won't think about these things in this toy problem. "
    ]
   },
   {
@@ -706,9 +706,9 @@
    "source": [
     "For classification a common metric is accuracy: what fraction of our predictions were correct? \n",
     "\n",
-    "But there are different kinds of errors: if we classify something as belonging to the positive class we can either be correct (**true positive**) or incorrect (**false positive**). If we classify something as negative we can either be correct (**true negative**) or incorrect (**false negative**). \n",
+    "But there are different kinds of errors in binary classification: if we classify something as belonging to the positive class we can either be correct (**true positive**) or incorrect (**false positive**). If we classify something as negative we can either be correct (**true negative**) or incorrect (**false negative**). \n",
     "\n",
-    "Which kinds of errors we care most about depends on the task: if we're diagnosing a treatable condition in patients we should do everything we can to reduce the false negative rate. While perhaps still keeping an on the false positive rate because a positive diagnosis could lead to invasive and extensive further testing for the patient.\n",
+    "Which kinds of errors we care most about depends on the task: if we're for example diagnosing a treatable condition in patients we should do everything we can to reduce the false negative rate. While perhaps still keeping an eye on the false positive rate because a positive diagnosis could lead to invasive and extensive further testing for the patient.\n",
     "\n",
     "In spam filtering we care most about not marking important emails as spam, i.e. we want a low false positive rate (non-spam marked as spam) even if it means a higher false negative rate (some spam emails ending up in our inbox). "
    ]
@@ -732,6 +732,11 @@
    "metadata": {},
    "source": [
     "By setting aside a subset of the training data (a hold-out set) as a test set we can use it to evaluate model perfomance. Remember (again!) we're not interested in how well our models perform on the training set, what we're really after is how well they generalize to unseen data. The test set simulates unseen data (and should therefore not be touched when constructing and tuning our models). \n",
+    "\n",
+    "<img width=50% src=\"assets/testsplit.png\">\n",
+    "\n",
+    "\n",
+    "Furthermore, if you plan to tune your model in any way, i.e. select parameters based on the model's performance, you need to split the training set further so that you also have a validation set. \n",
     "\n",
     "We've seen this idea used earlier in the course, and we know how to do this using the `train_test_split` function."
    ]
@@ -757,9 +762,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A frequently used way to evaluate models is to do *cross-validation*. A very important advantage of this method over the one above is that it doesn't waste as much training data. Unless you have plenty of data, cross-validation is the preferred method for estimating model performance.\n",
+    "Another frequently used way to set aside a test set is to use *cross-validation*. A very important advantage of this approach over the one above is that it doesn't waste as much training data. Unless you have plenty of data, cross-validation is the preferred method for estimating model performance.\n",
     "\n",
-    "Cross-validation provides a more thorough test than splitting the data into a training set and a test set. The `train_test_split` procedure sets aside a random subset of the data as a test set. If we're \"lucky\", all the difficult examples end up in the training set, while the test set contains only easy ones. That would lead to an overestimate of the true performance of our model."
+    "Cross-validation provides a more thorough test than splitting the data into a training set and a test set. The `train_test_split` procedure sets aside a fixed random subset of the data as a test set. If we're \"lucky\", all the difficult examples end up in the training set, while the test set contains only easy ones. That would lead to an overestimate of the true performance of our model."
    ]
   },
   {
@@ -780,7 +785,9 @@
    "source": [
     "Note: the special case where K is set to the number of data points in the training set is called *leave-one-out*. Each fold is then a single sample.\n",
     "\n",
-    "The result of this K-fold cross validation procedure is an array of K evaluation scores."
+    "The result of this K-fold cross validation procedure is an array of K evaluation scores.\n",
+    "\n",
+    "> We'll use the cross-validation approach in the rest of this notebook. "
    ]
   },
   {
@@ -1050,8 +1057,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's a nice pictorial explanation of precision and recall (from Wikipedia):<br>\n",
-    "<img src=\"assets/Precisionrecall.svg\">"
+    "Here's a useful pictorial explanation of precision and recall (from Wikipedia):<br>\n",
+    "<img width=\"40%\" src=\"assets/Precisionrecall.svg\">"
    ]
   },
   {
@@ -1898,7 +1905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We notice several intersting things:\n",
+    "We notice several interesting things:\n",
     "- Bright columns for 8 and 9 --> many images get misclassified as 8 or 9s.\n",
     "- Bright rows for 8 and 9 --> many 8s and 9s are often confused with other digits\n",
     "- The model confuses for example 7s with 9s and 3s with 5s"
