missing english translation + tweaks

--- a/Part1-intro/DAT158-Part1-simple_examples.ipynb
+++ b/Part1-intro/DAT158-Part1-simple_examples.ipynb
@@ -100,7 +100,7 @@
     "hidden": true
    },
    "source": [
-    "Throughout the course we'll use <a href=\"https://www.datacamp.com/community/tutorials/python-numpy-tutorial\">numpy</a> for numerical calculations, <a href=\"https://www.datacamp.com/community/tutorials/pandas-tutorial-dataframe-python\">pandas</a> and <a href=\"https://www.datacamp.com/community/tutorials/matplotlib-tutorial-python\">matplotlib</a> to create plots. *You'll have to familiarize yourself with all three!* The above links are to some short tutorials. You'll also find more in DAT158 Part 0 in Canvas. If you haven't finished Part 0 yet, do so before continuing this notebook."
+    "Throughout the course we'll use <a href=\"https://www.datacamp.com/community/tutorials/python-numpy-tutorial\">numpy</a> for numerical calculations, <a href=\"https://www.datacamp.com/community/tutorials/pandas-tutorial-dataframe-python\">pandas</a> for working with tabular data (and more!), and <a href=\"https://www.datacamp.com/community/tutorials/matplotlib-tutorial-python\">matplotlib</a> to create plots. *You'll have to familiarize yourself with all three!* The above links are to some short tutorials. You'll also find more in DAT158 Part 0 in Canvas. If you haven't finished Part 0 yet, do so before continuing this notebook."
    ]
   },
   {
@@ -765,7 +765,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# All the code gathered:"
+    "# All the code gathered"
    ]
   },
   {
@@ -785,23 +785,22 @@
    },
    "outputs": [],
    "source": [
-    "# Last inn data og del opp i treningsdata og labels\n",
-    "from sklearn.datasets import load_iris\n",
+    "# Load the data and split into training data and labels\n",
     "iris_dataset = load_iris()\n",
     "X = iris_dataset['data'][:, [0, 1]]\n",
     "y = iris_dataset['target']\n",
     "\n",
-    "# Splitt opp i trenings- og testdata\n",
+    "# Split into training and test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "# Importer og tren en maskinlæringsmodell\n",
-    "rf = RandomForestClassifier(random_state=42) # random_state=42 for reproducibility\n",
+    "# Import and train a machine learning model\n",
+    "rf = RandomForestClassifier(random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# Prediker på testdata\n",
+    "# Predict on the test data\n",
     "y_pred = rf.predict(X_test)\n",
     "\n",
-    "# Evaluer modellen\n",
+    "# Evaluate the model\n",
     "accuracy_score(y_test, y_pred)"
    ]
   },
@@ -1140,7 +1139,7 @@
     "hidden": true
    },
    "source": [
-    "**Important!** Notice that the way we studied the diabetes data was essentially identical to what we did for Iris! "
+    "> **Important!** Notice that the way we studied the diabetes data was essentially identical to what we did for Iris! "
    ]
   },
   {
