--- a/Part1-intro/DAT158-Part1-simple_examples.ipynb
+++ b/Part1-intro/DAT158-Part1-simple_examples.ipynb
@@ -30,18 +30,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We'll use a much studied, classical data set: [Iris flower data set](https://archive.ics.uci.edu/ml/datasets/iris)"
    ]
@@ -49,9 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -76,13 +70,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The task is to predict the Iris flower type, either *Iris-Setosa*, *Iris-Versicolor* or *Iris-Virginica*, from its sepal and petal lengths and widths (\"begerblad\" and \"kronblad\" in Norwegian). \n",
     "\n",
-    "Remark: assigning each data point to a class is called **classification**. We'll learn a lot about classification in Part 2. "
+    "> Remark: assigning each data point to a class is called **classification**. We'll learn a lot about classification in Part 2. "
    ]
   },
   {
@@ -159,7 +151,7 @@
     "hidden": true
    },
    "source": [
-    "> **Your turn: ** Read about these and other *magic* commands by writing `%magic`. You can uncomment the command below and run the cell using `Shift+Enter`."
+    "> **Your turn:** Read about these and other *magic* commands by writing `%magic`. You can uncomment the command below and run the cell using `Shift+Enter`."
    ]
   },
   {
@@ -359,7 +351,7 @@
     "hidden": true
    },
    "source": [
-    "It's often very convenient to use **Pandas** when working with text-based data sets. In the following cell we collect all the data in a `Pandas dataframe` (a tabular format):"
+    "It's often very convenient to use Pandas when working with text-based data sets. In the following cell we collect all the data in a `Pandas dataframe` (a tabular format):"
    ]
   },
   {
@@ -604,7 +596,7 @@
     "hidden": true
    },
    "source": [
-    "We collect the training data in a data frame:"
+    "Let's collect the training data in a dataframe and display it:"
    ]
   },
   {
@@ -627,6 +619,27 @@
    "outputs": [],
    "source": [
     "iris_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "...same with the test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "iris_df_test = pd.DataFrame(X_test, columns=iris_dataset['feature_names'][0:2])\n",
+    "iris_df_test.head(10)"
    ]
   },
   {
@@ -699,7 +712,7 @@
     "hidden": true
    },
    "source": [
-    "As you see, there are a bunch of parameters to choose in a `RandomForestClassifier`. To be explained later. We're just using default values for now."
+    "As you see, there are a bunch of parameters to choose in a `RandomForestClassifier`. To be explained later in the course. We're just using default values for now."
    ]
   },
   {
@@ -774,7 +787,7 @@
     "hidden": true
    },
    "source": [
-    "Here's the code we used to load the data, select features, split into train and test sets, train a model, predict and evaluate. "
+    "Here's the code we used to load the data, select features, split into train and test sets, train a model, predict and evaluate. Eight lines of code!"
    ]
   },
   {
@@ -1330,7 +1343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
