--- a/Part1-intro/DAT158-Part1-Intro_to_ML.ipynb
+++ b/Part1-intro/DAT158-Part1-Intro_to_ML.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "v.1.0, August 24th"
+    "Alexander S. Lundervold, August 27th, 2018"
    ]
   },
   {
@@ -878,6 +878,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -1129,6 +1130,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -1412,7 +1414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
