some changes (and solutions) made during the lecture

--- a/Part2-classification/DAT158-Part2-Classification.ipynb
+++ b/Part2-classification/DAT158-Part2-Classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alexander S. Lundervold, August 27th, 2018"
+    "Alexander S. Lundervold, August 28th, 2018"
    ]
   },
   {
@@ -297,7 +297,7 @@
    },
    "outputs": [],
    "source": [
-    "#?fetch_mldata"
+    "?fetch_mldata"
    ]
   },
   {
@@ -602,7 +602,60 @@
    },
    "source": [
     "> **Your turn!**\n",
-    "- Make a function that plots a random selection of images from a specified class. For example, `plot_images(image_class=7, nb=5)` should plot five random 7's. You'll want to create these kind of small helper functions anytime you're investigating a dataset. "
+    "- Make a function that plots a random selection of images from a specified class. For example, `plot_images(image_class=7, nb=5)` should plot five random 7's. You'll want to create these kind of small throwaway helper functions anytime you're investigating a dataset. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "####\n",
+    "## A POSSIBLE SOlUTION PRESENTED IN LECTURE\n",
+    "####\n",
+    "\n",
+    "def plot_images(image_class, nb):\n",
+    "    # Get all images of correct class:\n",
+    "    imgs = [ X[i] for i in range(len(X)) if y[i] == image_class ]\n",
+    "    \n",
+    "    # Another way is to first get the indexes, then the images:\n",
+    "    imgs_id = np.where(y==image_class)[0]\n",
+    "    imgs = X[imgs_id]\n",
+    "    \n",
+    "    # Pick nb of them randomly \n",
+    "    imgs_plot = random.choices(imgs, k=nb)\n",
+    "    \n",
+    "    # Plot using plot_digits\n",
+    "    f = plt.figure(figsize=(14,14))\n",
+    "    for i in range(nb):\n",
+    "        plt.subplot(1,nb,i+1)\n",
+    "        plot_digit(imgs_plot[i])\n",
+    "    plt.show()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "plot_images(7, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "plot_images(8, 25)"
    ]
   },
   {
@@ -706,7 +759,7 @@
     "hidden": true
    },
    "source": [
-    "We start by constructing a **binary classifier**: a system that aims to distinguish 5's from non-5's. This makes things easier."
+    "We start by constructing a **binary classifier**: a system that aims to distinguish 5's from non-5's. This makes things easier, and will also help illustrate some important issues later.."
    ]
   },
   {
@@ -759,6 +812,17 @@
    },
    "outputs": [],
    "source": [
+    "#?SGDClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
     "# Create an instance of the model:\n",
     "sgd_clf = SGDClassifier()"
    ]
@@ -792,13 +856,13 @@
    },
    "outputs": [],
    "source": [
-    "def predict_image(X):\n",
-    "    plot_digit(X)\n",
+    "def predict_image(img):\n",
+    "    plot_digit(img)\n",
     "    plt.title('Input image')\n",
     "    plt.show()\n",
     "    \n",
     "    # Predict\n",
-    "    pred = sgd_clf.predict([X]) \n",
+    "    pred = sgd_clf.predict([img]) \n",
     "    print(f'Prediction: {pred}')"
    ]
   },
@@ -907,7 +971,7 @@
     "hidden": true
    },
    "source": [
-    "### Using a test set"
+    "### Using validation and test sets"
    ]
   },
   {
@@ -920,8 +984,16 @@
     "\n",
     "<img width=50% src=\"assets/testsplit.png\">\n",
     "\n",
-    "\n",
-    "Furthermore, if you plan to tune your model in any way, i.e. select parameters based on the model's performance, you need to split the training set further so that you also have a validation set. \n",
+    "This is what we did earlier. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Furthermore, if you plan to tune your model in any way, i.e. select parameters based on the model's performance (something you'll always want to do!), you need to split the training set further so that you also have a validation set. \n",
     "\n",
     "We've seen this idea used earlier in the course, and we know how to do this using the `train_test_split` function."
    ]
@@ -933,10 +1005,10 @@
    },
    "source": [
     "> **Your turn!**\n",
-    "- Split `(X_train, y_train)` into two parts: one for training, one for validation\n",
-    "- Train your model again on the new training set, and compute its accuracy on the test set using the `score` method. \n",
+    "- Split `(X_train, y_train)` into two parts: one for training, one for validation. You can call the new data sets and label sets `X_train_new, X_val, y_train_5_new, y_val_5`\n",
+    "- Train your model again on the new training set, and compute its accuracy on the validation set using the `score` method: `model.score(X_val, y_val_5)` \n",
     "- Is the result good? What accuracy would a random guesser have?\n",
-    "- Play around with some of the parameters of `SGDClassifier` and try to improve the result on the validation set. Once you've found some parameters that seem good, test on the test set. (If you want to be thorough, use grid search to test parameter combinations)."
+    "- Play around with some of the parameters of `SGDClassifier` and try to improve the result on the validation set. Once you've found some parameters that seem good, test on the test set: `model.predict(X_test)` and `model.score(X_test, y_test_5)` (If you want to be thorough, use grid search to test parameter combinations)."
    ]
   },
   {
